# Zelda

./: Makefile  README.md
Zelda_v0.1/: Makefile  README  ToDo  configure.ac  run_install.sh
Zelda_v0.1/example/: 1000k.db  example.sh  labda_r1.fastq  labda_r2.fastq  lambda_R1.fastq  lambda_R2.fastq
Zelda_v0.1/include/: CC.h  ConsensusCaller.h  DBGraph.h  DBGraph_error.h  DBGraph_oa.h  DBGraph_reduced.h  DBGraph_scaffold.h  DBGraph_stringer.h  FileReader.h  kmer.h  kmerHash.h  kmerHash_oa.h  misc_hash.h  readDB.h  read_filter.h
Zelda_v0.1/src/: CC.c  CC2.c  ConsensusCaller.c  ConsensusCaller2.c  DBGraph.c  DBGraph_error.c  DBGraph_oa.c  DBGraph_reduced.c  DBGraph_reduced_strong.c  DBGraph_scaffold.c  DBGraph_scaffold_touring.c  DBGraph_stringer_2.c  DBGraph_stringer_refine.c  FileReader.c  Makefile.am  Zelda.c  kmer.c  kmerHash.c  kmerHash_oa.c  misc_hash.c  readDB.c  read_filter.c
